Hash testing against Pattern class.

--- a/.gitignore
+++ b/.gitignore
@@ -3089,3 +3089,4 @@ __pycache__/StagingPalette.cpython-38.pyc
 __pycache__/ColorEntriesIntoFinalPixelsEvaluator.cpython-38.pyc
 __pycache__/Interval.cpython-38.pyc
 __pycache__/IntervalsToBitSetsEvaluator.cpython-38.pyc
+__pycache__/Pattern.cpython-38.pyc
